# NetFormats

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  conanfile.py
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build.yml  cmake.yml
.github/workflows/conan-profiles/: linux-clang  linux-gcc
src/: CMakeLists.txt
src/docs/: JsonMcKeeman.txt
src/netformats/: basic_array.hpp  basic_object.hpp  basic_parser.hpp  basic_value.hpp  expected.hpp  json_config.hpp  null.hpp  storage_defs.hpp  text_position.hpp  type_traits.hpp  unicode_tokenizer.hpp
src/netformats/json/: basic_object.hpp  basic_parser.hpp  basic_value.hpp  config.hpp  constants.hpp  json_config.hpp  parse_error.hpp  stringify.hpp  tokenizer.hpp
tests/: CMakeLists.txt  custom_allocator.cpp  numbers.cpp  parse_error.cpp  simple_array.cpp  simple_object.cpp  simple_root.cpp  strings.cpp  test_defs.hpp  whitespaces.cpp
